<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter_favorites"
        android:orderInCategory="2"
        android:title="@string/action_favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_now_playing"
        android:orderInCategory="3"
        android:title="@string/action_filter_now_playing"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_popularity"
        android:orderInCategory="4"
        android:title="@string/action_filter_popularity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_rating"
        android:orderInCategory="5"
        android:title="@string/action_filter_rating"
        app:showAsAction="never" />
</menu>