<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <GridView
            android:id="@+id/recyclerview_movies"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:columnWidth="150dp"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:scrollbars="none"
            android:stretchMode="columnWidth" />

        <TextView
            android:id="@+id/txt_error_fetch_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="55dp"
            android:text="@string/error_fetch_data"
            android:textAlignment="center"
            android:textColor="@color/lightGray"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_sad_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sad_face"
            android:textColor="@color/lightGray"
            android:textSize="35sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_list_movies"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_without_network"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/lightBlack"
            android:orientation="horizontal"
            android:paddingEnd="22dp"
            android:paddingStart="22dp"
            android:visibility="invisible"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/without_internet"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_try_again"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/try_agin"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </FrameLayout>
</LinearLayout>
